--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,25 @@
+#calculator-container {
+  background-color: #E8F4FF;
+  border: 3px solid #000000;
+  box-shadow: 4px 4px #9BD;
+  font-family: "Georgia", "Calibri", "Trebuchet MS", "Tahoma", sans-serif;
+  font-size: 24px;
+  height: 90vh;
+  padding: 12px;
+  width: 33vw;
+}
+
+#big-grid {
+  background-color: #f0f;
+  border-collapse: collapse;
+  display: grid;
+  grid-template-rows: repeat(7, minmax(0,1fr));
+  width: 100%;
+  height: 100%;
+}
+
 .App {
+  background-color: #00f;
   text-align: center;
 }
 
@@ -14,18 +35,16 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #0f0;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .App-link {
-  color: #61dafb;
+  color: #00b;
 }
 
 @keyframes App-logo-spin {
