--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   font-family: "Georgia", "Calibri", "Trebuchet MS", "Tahoma", sans-serif;
   font-size: 24px;
   height: 90vh;
+  margin: 8px;
   padding: 12px;
   width: 33vw;
 }
@@ -18,7 +19,7 @@
   height: 100%;
 }
 
-#answer-display {
+#answerDisplay {
   background-color: #FFF;
   border: 1px solid #79B;
   font-family: "Calibri", "Trebuchet MS", "Tahoma", sans-serif;
@@ -103,7 +104,7 @@
 }
 
 .App {
-  background-color: #00f;
+  /* background-image: linear-gradient(90deg, #fff 40%, #adf 60%); */
   text-align: center;
 }
 
@@ -119,7 +120,7 @@
 }
 
 .App-header {
-  background-color: #0f0;
+  /* background-color: #0f0; */
   display: flex;
   flex-direction: column;
   align-items: center;
