--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,34 @@
+#answerDisplay {
+  background-color: #FFF;
+  border: 1px solid #79B;
+  font-family: "Calibri", "Trebuchet MS", "Tahoma", sans-serif;
+  letter-spacing: 1px;
+  grid-row-start: 1;
+  grid-row-end: 3;
+  overflow: auto;
+  padding: 5px 8px;
+  text-align: right;
+}
+
+.App {
+  /* background-image: linear-gradient(90deg, #fff 40%, #adf 60%); */
+  text-align: center;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+#big-grid {
+  background-color: #f0f;
+  border-collapse: collapse;
+  display: grid;
+  grid-template-rows: repeat(7, minmax(0,1fr));
+  width: 100%;
+  height: 100%;
+}
+
 #calculator-container {
   background-color: #E8F4FF;
   border: 3px solid #000000;
@@ -10,25 +41,21 @@
   width: 500px;
 }
 
-#big-grid {
-  background-color: #f0f;
-  border-collapse: collapse;
-  display: grid;
-  grid-template-rows: repeat(7, minmax(0,1fr));
-  width: 100%;
-  height: 100%;
+#clearButton {
+  background-color: #182850;
+  color: #fff;
+  grid-row-start: 2;
+  grid-row-end: 4;
 }
 
-#answerDisplay {
-  background-color: #FFF;
-  border: 1px solid #79B;
-  font-family: "Calibri", "Trebuchet MS", "Tahoma", sans-serif;
-  letter-spacing: 1px;
-  grid-row-start: 1;
-  grid-row-end: 3;
-  overflow: auto;
-  padding: 5px 8px;
-  text-align: right;
+div:focus {
+  outline: none;
+}
+
+#equalsButton {
+  background-color: #fff;
+  grid-row-start: 4;
+  grid-row-end: 6;
 }
 
 #keypad {
@@ -78,23 +105,6 @@
   grid-column-end: 6;
 }
 
-#clearButton {
-  background-color: #182850;
-  color: #fff;
-  grid-row-start: 2;
-  grid-row-end: 4;
-}
-
-#equalsButton {
-  background-color: #fff;
-  grid-row-start: 4;
-  grid-row-end: 6;
-}
-
-.offWhite {
-  background-color: #ECF5FF;
-}
-
 .ltGray {
   background-color: #CFDAE6;
 }
@@ -103,14 +113,8 @@
   background-color: #B3BFCC;
 }
 
-.App {
-  /* background-image: linear-gradient(90deg, #fff 40%, #adf 60%); */
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.offWhite {
+  background-color: #ECF5FF;
 }
 
 @media (prefers-reduced-motion: no-preference) {
